--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,15 @@
 
 	</properties>
 
-	<scm>git@github.com:tilnik/nervous-lonesome-street.git </scm>
+	<!--<scm>-->
+	<!--<developerConnection>git@github.com:tilnik/nervous-lonesome-street.git</developerConnection>-->
+	<!--</scm>-->
+
+	<scm>
+		<connection>scm:git:file:///workspace/NLS/nervous-lonesome-street</connection>
+		<developerConnection>scm:git:file:///workspace/NLS/nervous-lonesome-street</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
 
 
 	<build>
@@ -31,6 +39,12 @@
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.1</version>
 			</plugin>
 		</plugins>
 	</build>
