Zaključeno verzija 1.0.1-SNAPSHOT

--- a/release.properties
+++ b/release.properties
@@ -1,12 +1,18 @@
 #release configuration
-#Wed Jun 14 22:04:25 CEST 2017
+#Wed Jun 14 22:06:04 CEST 2017
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
+scm.tag=nls-1.0.0
 pushChanges=true
 scm.url=scm\:git\:file\:///workspace/NLS/nervous-lonesome-street
 preparationGoals=clean verify
+project.dev.si.tilnik\:nls=1.0.1-SNAPSHOT
+project.scm.si.tilnik\:nls.developerConnection=scm\:git\:file\:///workspace/NLS/nervous-lonesome-street
 remoteTagging=true
 projectVersionPolicyId=default
 scm.commentPrefix=[maven-release-plugin] 
-exec.additionalArguments=-P nexus
+project.rel.si.tilnik\:nls=1.0.0
+project.scm.si.tilnik\:nls.connection=scm\:git\:file\:///workspace/NLS/nervous-lonesome-street
+project.scm.si.tilnik\:nls.tag=HEAD
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+exec.additionalArguments=-P nexus
+completedPhase=end-release
