--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,12 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 
-		<version.maven.compiler.plugin>3.3</version.maven.compiler.plugin>
-		<version.maven.source.plugin>3.0.0</version.maven.source.plugin>
+		<version.maven.compiler.plugin>3.7.0</version.maven.compiler.plugin>
+		<version.maven.source.plugin>3.0.1</version.maven.source.plugin>
 
 		<failOnMissingWebXml>false</failOnMissingWebXml>
 
-		<version.wildfly-swarm>2017.9.5</version.wildfly-swarm>
+		<version.wildfly-swarm>2018.1.0</version.wildfly-swarm>
 		<version.javaee.api>7.0</version.javaee.api>
 
 	</properties>
@@ -122,11 +122,11 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.1</version>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-release-plugin</artifactId>-->
+				<!--<version>2.5.1</version>-->
+			<!--</plugin>-->
 		</plugins>
 	</build>
 
