--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,14 @@
 			<version>12.1.0.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+		<!--<dependency>-->
+			<!--<groupId>net.sf.jasperreports</groupId>-->
+			<!--<artifactId>jasperreports</artifactId>-->
+			<!--<version>6.5.1</version>-->
+		<!--</dependency>-->
+
+
 
 	</dependencies>
 
